--- a/everest/src/main/resources/application.properties
+++ b/everest/src/main/resources/application.properties
@@ -3,6 +3,10 @@ spring.datasource.url=jdbc:mysql://localhost:6060/everest
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+spring.servlet.multipart.enabled=true
+
 
 spring.jpa.hibernate.ddl-auto=none
 
