--- a/everest/src/main/resources/application.properties
+++ b/everest/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=6601
+server.http2.enabled=false
 spring.datasource.url=jdbc:mysql://localhost:6060/everest
 spring.datasource.username=root
 spring.datasource.password=123456
