--- a/everest/src/main/resources/application.properties
+++ b/everest/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 server.port=6601
+
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=154623123Vy
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=everestweb
+
 server.http2.enabled=false
 spring.datasource.url=jdbc:mysql://localhost:6060/everest
 spring.datasource.username=root
