update source code

--- a/everest/src/main/resources/application.properties
+++ b/everest/src/main/resources/application.properties
@@ -19,3 +19,14 @@ spring.jpa.hibernate.ddl-auto=none
 
 key.token.jwt = f6DXHNYia5sDAkjUGdYkrhidBFu0glwmiYq1f2evykg=
 upload.file.path=D:\\ProjectEVEREST\\uploads
+
+redis.host = localhost
+redis.port = 6378
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nhockieuvy5@gmail.com
+spring.mail.password=hlcwzzyieiuvunmh
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
